--- a/client/index.html
+++ b/client/index.html
@@ -5,15 +5,12 @@
         <title>Trak-Bon Docs</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-green.min.css" />
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
-        <link rel="stylesheet" href="material.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
         <link rel="stylesheet" href="https://cdn.quilljs.com/1.2.4/quill.snow.css">
         <link rel="stylesheet" href="../node_modules/react-quill/dist/quill.snow.css">
     </head>
     <body>
         <div id='app'></div>
-        <script src="material.js"></script>
-        <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
         <script src=bundle.js></script>
     </body>
 </html>
